Sorting out pending views, fixing scrollbars, removing state mutation from render

--- a/src/client/app/graphtimeline.css
+++ b/src/client/app/graphtimeline.css
@@ -124,6 +124,11 @@
   border-bottom-left-radius: 0px;
 }
 
+
+.node.invokeFunction {
+    border:2px solid darkblue;
+}
+
 [data-tooltip] {
   position: relative;
   z-index: 4;
